Made add-t0-cart btn Interactive

--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -59,6 +59,7 @@
       <div class="products-grid js-products-grid"></div>
     </div>
 
+    <script src="/javascript-amazon-project-main//data//cart.js"></script>
     <script src="/javascript-amazon-project-main/data/products.js"></script>
     <script src="/javascript-amazon-project-main/amazon.js"></script>
   </body>
