import products and cart to amazon.js

--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -59,8 +59,9 @@
       <div class="products-grid js-products-grid"></div>
     </div>
 
-    <script src="/javascript-amazon-project-main//data//cart.js"></script>
-    <script src="/javascript-amazon-project-main/data/products.js"></script>
-    <script src="/javascript-amazon-project-main/amazon.js"></script>
+    <script
+      type="module"
+      src="/javascript-amazon-project-main/amazon.js"
+    ></script>
   </body>
 </html>
