Delete product from cart and HTML element.

--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -88,6 +88,9 @@
       </div>
     </div>
 
-    <script type="module" src="/checkout.js"></script>
+    <script
+      type="module"
+      src="/javascript-amazon-project-main/checkout.js"
+    ></script>
   </body>
 </html>
